--- a/paper-revision/references.bib
+++ b/paper-revision/references.bib
@@ -97,7 +97,6 @@ volume = {10},
 year = {2019}
 }
 @article{Biau2007,
-abstract = {Assessing the number of clusters of a statistical population is one of the essential issues of unsupervised learning. Given n independent observations X1, . . . , Xn drawn from an unknown multivariate probability density f , we propose a new approach to estimate the number of connected components, or clusters, of the t-level set L(t) = {\{}x : f (x) ≥ t{\}}. The basic idea is to form a rough skeleton of the set L(t) using any preliminary estimator of f , and to count the number of connected components of the resulting graph. Under mild analytic conditions on f , and using tools from differ-ential geometry, we establish the consistency of our method.},
 author = {Biau, G{\'{e}}rard and Cadre, Beno{\^{i}}t and Pelletier, Bruno},
 doi = {10.1051/ps:2007019},
 file = {:Users/Pavlin/mendeley/Biau, Cadre, Pelletier - 2007 - A graph-based estimator of the number of clusters.pdf:pdf},
@@ -113,7 +112,6 @@ volume = {11},
 year = {2007}
 }
 @article{Bickel2009,
-abstract = {We address classification problems for which the training instances are governed by an input distribution that is allowed to differ arbitrarily from the test distribution-problems also referred to as classification under covariate shift. We derive a solution that is purely discriminative: neither training nor test distribution are modeled explicitly. The problem of learning under covariate shift can be written as an integrated optimization problem. Instantiating the general optimization problem leads to a kernel logistic regression and an exponential model classifier for covariate shift. The optimization problem is convex under certain conditions; our findings also clarify the relationship to the known kernel mean matching procedure. We report on experiments on problems of spam filtering, text classification, and landmine detection. {\textcopyright}2009 Steffen Bickel, Michael Br{\"{u}}ckner and Tobias Scheffer.},
 author = {Bickel, Steffen and Br{\"{u}}ckner, Michael and Scheffer, Tobias},
 file = {:Users/Pavlin/mendeley/Bickel, Br{\"{u}}ckner, Scheffer - 2009 - Discriminative Learning Under Covariate Shift.pdf:pdf},
 issn = {15324435},
@@ -259,7 +257,6 @@ volume = {19},
 year = {2018}
 }
 @article{Hie2019,
-abstract = {Integration of single-cell RNA sequencing (scRNA-seq) data from multiple experiments, laboratories and technologies can uncover biological insights, but current methods for scRNA-seq data integration are limited by a requirement for datasets to derive from functionally similar cells. We present Scanorama, an algorithm that identifies and merges the shared cell types among all pairs of datasets and accurately integrates heterogeneous collections of scRNA-seq data. We applied Scanorama to integrate and remove batch effects across 105,476 cells from 26 diverse scRNA-seq experiments representing 9 different technologies. Scanorama is sensitive to subtle temporal changes within the same cell lineage, successfully integrating functionally similar cells across time series data of CD14+ monocytes at different stages of differentiation into macrophages. Finally, we show that Scanorama is orders of magnitude faster than existing techniques and can integrate a collection of 1,095,538 cells in just {\~{}}9 h.},
 author = {Hie, Brian and Bryson, Bryan and Berger, Bonnie},
 doi = {10.1038/s41587-019-0113-3},
 file = {:Users/Pavlin/mendeley/Hie, Bryson, Berger - 2019 - Efficient integration of heterogeneous single-cell transcriptomes using Scanorama.pdf:pdf},
@@ -425,7 +422,6 @@ year = {2019}
   publisher={Nature Publishing Group}
 }
 @article{Korsunsky2019,
-abstract = {The emerging diversity of single-cell RNA-seq datasets allows for the full transcriptional characterization of cell types across a wide variety of biological and clinical conditions. However, it is challenging to analyze them together, particularly when datasets are assayed with different technologies, because biological and technical differences are interspersed. We present Harmony (https://github.com/immunogenomics/harmony), an algorithm that projects cells into a shared embedding in which cells group by cell type rather than dataset-specific conditions. Harmony simultaneously accounts for multiple experimental and biological factors. In six analyses, we demonstrate the superior performance of Harmony to previously published algorithms while requiring fewer computational resources. Harmony enables the integration of {\~{}}106 cells on a personal computer. We apply Harmony to peripheral blood mononuclear cells from datasets with large experimental differences, five studies of pancreatic islet cells, mouse embryogenesis datasets and the integration of scRNA-seq with spatial transcriptomics data.},
 author = {Korsunsky, Ilya and Millard, Nghia and Fan, Jean and Slowikowski, Kamil and Zhang, Fan and Wei, Kevin and Baglaenko, Yuriy and Brenner, Michael and ru Loh, Po and Raychaudhuri, Soumya},
 doi = {10.1038/s41592-019-0619-0},
 file = {:Users/Pavlin/mendeley/Korsunsky et al. - 2019 - Fast, sensitive and accurate integration of single-cell data with Harmony.pdf:pdf},
@@ -931,4 +927,21 @@ year = {2019}
   pages={163},
   year={2014},
   publisher={Nature Publishing Group}
+}
+
+@article{weiss2016survey,
+  title={A survey of transfer learning},
+  author={Weiss, Karl and Khoshgoftaar, Taghi M and Wang, DingDing},
+  journal={Journal of Big data},
+  volume={3},
+  number={1},
+  pages={1--40},
+  year={2016}
+}
+
+@article{liu2019jointly,
+  title={Jointly embedding multiple single-cell omics measurements},
+  author={Liu, Jie and Huang, Yuanhao and Singh, Ritambhara and Vert, Jean-Philippe and Noble, William Stafford},
+  journal={The Workshop on Algorithms in Bioinformatics},
+  year={2019}
 }
