--- a/paper-revision/response-to-reviewers.tex
+++ b/paper-revision/response-to-reviewers.tex
@@ -199,7 +199,7 @@ We have altered the wording in ``Availability and Implementation'' section to em
 \reviewc{r2q5}{PCA-based initialization seems to help a lot. I would appreciate to see a comparison of the results with those achievable with the simple application of PCA with just 2 principal components.}
 
 \answer{
-PCA fails to produce cluster-informative visualizations of any high-dimensional data, as it focuses on variance instead of clustering structure. Comparison of these two methods have been already and extensively published (see, for instance, XXX).
+PCA fails to produce cluster-informative visualizations of any high-dimensional data, as it focuses on variance instead of clustering structure. Comparison of these two methods have been already and extensively published (see, for instance, ``viSNE enables visualization of high dimensional single-cell data and reveals phenotypic heterogeneity of leukemia'' supplementary material).
 }
 
 
